@@ -45,6 +45,12 @@ $rcmail_config['markasjunk2_mb_toolbar'] = true;
 // The mark as spam/ham icon can either be displayed on the toolbar or as part of the mark messages menu
 $rcmail_config['markasjunk2_cp_toolbar'] = true;
 
+// Learn any message moved to the spam mailbox as spam (not just when the button is pressed)
+$rcmail_config['markasjunk2_move_spam'] = false;
+
+// Learn any message moved from the spam mailbox to the ham mailbox as ham (not just when the button is pressed)
+$rcmail_config['markasjunk2_move_ham'] = false;
+
 // cmd_learn Driver options
 // ------------------------
 // The command used to learn that a message is spam
