@@ -1,6 +1,8 @@
 Roundcube Webmail MarkAsJunk2
 =============================
 
+ * add option to call markasjunk2 functions on message move
+
 Version 1.6 (2013-03-03, rc-0.9)
 =================================================
  * merge PDO branch (de56ea1909)
